--- a/SegundoSemestre/nodejs/package.json
+++ b/SegundoSemestre/nodejs/package.json
@@ -19,7 +19,6 @@
     "ejs": "^2.5.7",
     "express": "^4.15.3",
     "express-validator": "^3.1.3",
-    "mysql": "^2.14.1",
-    "oracledb": "^4.0.1"
+    "mysql": "^2.14.1"
   }
 }
